# rtpl

./: .gitignore  Cargo.toml  GITHUB_ACTIONS_SETUP.md  LICENSE  Makefile  PKGBUILD  README.md  clippy.toml  rustfmt.toml
.github/: CI_QUICK_REFERENCE.md
.github/workflows/: README.md  ci.yml  makefile.yml  release.yml
Formula/: rtpl.rb
docs/: ADDING_FILTERS.md
src/: cli.rs  data.rs  filters.rs  lib.rs  main.rs  template.rs
