[package]
name = "rtpl"
version = "0.1.0"
license = "MIT"
description = "A command-line tool for rendering Jinja2 templates with data from various sources"
repository = "https://github.com/fabiomontefuscolo/rtpl"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
